2001-02-04  Bruno Haible  <haible@clisp.cons.org>

        * spvw.d (init_symbol_values): Initialize
          SYS::*LOGICAL-PATHNAME-TRANSLATIONS* to an EQUALP hash table.

2001-02-04  Bruno Haible  <haible@clisp.cons.org>

        * pathname.d: Back out Sam's 2001-01-03 and 2001-01-04 patches.
          (host_namestring_parts): Use "\\\\" instead of twice "\\".
          (directory_namestring): Include the host namestring parts.
          (MERGE-PATHNAMES): If pathname's host is NIL but pathname's device
          is non-NIL, on Win32, don't take the defaults' host+device.
          (MAKE-PATHNAME): If pathname's host and device are both non-NIL on
          Win32, signal an error.
          (use_default_dir) [OS2, WIN32]: If the pathname already has a host:
          1. Don't insert the default drive. 2. Resolve :RELATIVE to
          :ABSOLUTE.
          (assure_dir_exists): Include host_namestring_parts.
          (directory_exists): Likewise.
          (CD): Signal error if pathname includes a host.

2001-02-03  Bruno Haible  <haible@clisp.cons.org>

        * configure: Also copy gettext/autoconf.
        * makemake.in (libintl.h): Link to gettext/intl/libintl.h.
        * lispbibl.d (GETTEXTL): New macro.
          (clgettextl): New declaration.
        * amigaaux.d: Use GETTEXTL instead of GETTEXT for strings to be output
          via asciz_out().
        * spvw.d: Likewise.
        * spvw_alloca.d: Likewise.
        * spvw_allocate.d: Likewise.
        * spvw_fault.d: Likewise.
        * spvw_garcol.d: Likewise.
        * spvw_memfile.d: Likewise.
        * spvw_mmap.d: Likewise.
        * spvw_multimap.d: Likewise.
        * spvw_sigsegv.d: Likewise.
        * spvw_language.d (init_language): Call bindtextdomain also for domain
          "clisplow". Remove textdomain() call. Call bind_textdomain_codeset.
          (to_latin_table, from_latin_table, cvgettext): Remove.
          (clgettext): Call dgettext with domain "clisp".